# Wrap-MCP

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  run.rs
src/logging/: entry.rs  filter.rs  mod.rs  storage.rs
src/proxy/: mod.rs
src/server/: file_watcher.rs  handler.rs  mod.rs  transport.rs  wrap_server.rs  wrappee_controller.rs  wrappee_manager.rs  wrappee_state.rs
src/server/wrappee/: handler.rs  mod.rs
src/tools/: clear_log.rs  manager.rs  mod.rs  server.rs  show_log.rs
src/types/: mod.rs
src/wrappee/: mod.rs
tests/: integration_test.rs
