[package]
name = "wrap-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.4", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "transport-worker",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
    "tracing",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
# Required for streamable HTTP transport (minimal features)
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2"] }
schemars = { version = "1.0" }